# oxru

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md  install-local.sh  install.sh  run-local.sh
assets/fonts/: LICENSE.md
examples/: config.toml
src/: app.rs  buffer.rs  config.rs  editline.rs  filedialog.rs  fonts.rs  fstree.rs  gui.rs  icons.rs  input.rs  instances.rs  logging.rs  main.rs  picker.rs  prompt.rs  recent.rs  search.rs  session.rs  syntax.rs  termbridge.rs  terminalpane.rs  theme.rs  ui.rs
src/gui/: cursor.rs  cursor.wgsl
