[package]
name = "oxru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.4.1"
dirs = "5.0.1"
ignore = "0.4.23"
portable-pty = "0.9.0"
ratatui = "0.30.1"
ropey = "1.6.1"
vt100 = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-toml-ng = "0.7.0"

# GUI ("windowed") mode — optional, on by default so `--gui` works out of the
# box. Build with `--no-default-features` for a lean terminal-only binary.
ratatui-wgpu = { version = "0.5.0", optional = true }
winit = { version = "0.30.13", optional = true }
pollster = { version = "0.4.0", optional = true }

[features]
default = ["gui"]
gui = ["dep:ratatui-wgpu", "dep:winit", "dep:pollster"]

# macOS: hold an NSProcessInfo "activity" at runtime to defeat App Nap, which
# otherwise suspends the whole process (PTY reader threads included) when the
# window is backgrounded — freezing embedded-terminal output. See gui::run.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }
# Native "Open Folder" picker. A folder chosen through the system panel is
# granted by user intent (powerbox), so it sidesteps the Documents/Desktop TCC
# prompt for that folder. macOS-only; other platforms get a no-op for now.
rfd = { version = "0.15", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "thin"
